--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,14 @@
   background-image: url("./assets/Woman.png");
 }
 
+.moonflower {
+  width: 40px;
+  height: 45px;
+  background-image: url("./assets/moonflower.png");
+  background-size: 100px;
+  background-position: -65px 0px;
+}
+
 #start-screen {
   background-image: url("./assets/start-screen.webp");
   background-size: cover;
