--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,45 @@
 #start-screen {
   background-image: url("./assets/start-screen.webp");
   background-size: cover;
+  background-repeat: no-repeat;
   height: 100vh;
   background-position: 0px -20px;
   color: rgb(rgb(64, 38, 21), green, blue)
+}
+
+
+.form-container {
+  
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: black;
+
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 40%;
+  border: 2px solid;
+  border-radius: 5px;
+  padding: 5px;
+  background-color: antiquewhite;
+}
+
+.form-element {
+  width: 50%;
+  margin-bottom: 20px;
+}
+
+.button {
+  background-color: rgb(155, 112, 70);
+  top: 90%;
+  left: 50%;
+  position: absolute;
+  border-style: double;
+  padding: 5px 20px;
 }
