--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,14 @@
   border-style: double;
   padding: 5px 20px;
 }
+
+#game-over-screen {
+  position: relative;
+  background-image: url("./assets/background.webp");
+  width: 1792px;
+  height: 1024px;
+  background-repeat: no-repeat;
+  background-position: 0px 0px;
+  z-index: 0;
+  
+}
