--- a/src/index.css
+++ b/src/index.css
@@ -82,13 +82,11 @@
 }
 
 #game-over-screen {
-  position: relative;
-  background-image: url("./assets/background.webp");
-  width: 1792px;
-  height: 1024px;
-  background-repeat: no-repeat;
-  background-position: 0px 0px;
-  z-index: 0;
+  background-color: black;
+  width: 100vw;
+  height: 100vh;
+  
+
   
 }
 
